# crypto-tray

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pl.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: main.rs
tools/: gen_icon.rs
wix/: License.rtf  main.wxs
